--- a/config.yml
+++ b/config.yml
@@ -4,6 +4,10 @@ message_text: "Google Play Review:"
 ios_message_text: "App Store Review:"
 review_count: 20
 location: "zh-tw"
+ioslocations:
+  - "tw"
+  - "us"
+  - "jp"
 
 # web_hook_uri: "https://hooks.slack.com/services/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GG"
 # app_id: "com.streetvoice.streetvoice"
